# conysolabs

./: .gitignore  8-june-summaries.md  Dockerfile  HANDOFF.md  LAUNCH.md  README.md  docker-compose.yml  railway.toml  start.sh
docs/mockups/: c-hybrid.html  (+3 more)
monitor/: Dockerfile  README.md  index.js  package.json  spc.js
server/: ARCHITECTURE.md  Dockerfile  index.js  package-lock.json  package.json
sidecar/: Dockerfile  README.md  app.py  pyproject.toml
sidecar/parsers/: csv_parser.py  excel.py  pdf.py  screenshot.py
sidecar/stats/: _constants.py  _theme.py  acceptance_sampling.py  agreement.py  anom.py  attribute_capability.py  bayesian.py  bootstrap.py  capability.py  control_chart.py  correlation.py  distribution_id.py  doe.py  dpmo.py  flow.py  followups.py  gage_linearity.py  graphs.py  hypothesis.py  mixed_effects.py  msa.py  multivariate.py  narrative.py  pareto.py  posthoc.py  predictive_cpk.py  preflight.py  probability.py  quality_helpers.py  random_data.py  recommend.py  regression.py  reliability.py  sample_size.py  simulation.py  sixpack.py  survey.py  survival.py  text_pareto.py  time_series.py  (+3 more)
sidecar/tests/: test_advanced_stats.py  test_better_than_minitab.py  test_correctness_audit.py  test_coverage_extension.py  test_dunn.py  test_flow.py  test_http_endpoints.py  test_leap_ahead.py  test_minitab_parity.py  test_new_modules.py  test_parity_push.py  test_partial_completions.py  test_recommend.py  test_simulation.py  test_stats.py  test_survey.py  test_voc_originals.py  test_wrangle.py
sidecar/wrangle/: materialize.py  outliers.py  transform.py
(+45 files in other folders)
